Add /admin/coment add/update and remove functions and their validation Add remove post and its images,links and comments functions Add remove Page and its posts functions Add /admin/showComments /admin/approveComments admin/removeComments in swagger Add /admin/removePost in swagger Add /admin/removePage in swagger Modify postModel, pageModel
